# wordlist-dedup

./: .gitignore  Cargo.toml  README.md  create_1g.sh  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
src/: linecount.rs  main.rs  parser.rs  reader.rs  spinner.rs
