[package]
name = "wordlist-dedup"
version = "0.1.4"
authors = ["Michael Sasser <Michael@MichaelSasser.org>"]
edition = "2021"
license = "GPL-3.0+"
keywords = ["deduplication", "wordlist"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = "0.16.2"
clap = { version = "3.1.0", features = ["cargo"] }
