[package]
name = "wordlist-dedup"
version = "0.1.4"
authors = ["Michael Sasser <Michael@MichaelSasser.org>"]
edition = "2021"
license = "GPL-3.0+"
keywords = ["deduplication", "wordlist"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = "0.17.0"
clap = { version = "3.0.14", features = ["cargo"] }
